# meetre

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
src/meetre/: __init__.py  align.py  autostart.py  bundle.py  cli.py  config.py  crashlog.py  downloads.py  icon.py  integrations.py  menubar.py  recorder.py  summarizer.py  sysaudio.py  transcriber.py  transcript.py  ui.py  updater.py
src/meetre/helpers/: syscap.swift
