[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetre"
version = "0.3.2"
description = "Record macOS audio and turn meetings into transcripts with speaker association."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agendaro" }]
dependencies = [
    "rich>=13.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "soundfile>=0.12",
    # Apple Silicon: Metal-accelerated transcription via MLX.
    "mlx-whisper>=0.4.0",
    # Local LLM summarization via MLX. 0.31.3+ adds the gemma4 + qwen3.5
    # architectures used by the current summary-model lineup; older mlx-lm
    # fails to load those repos with "Model type gemma4 not supported".
    "mlx-lm>=0.31.3",
]

[project.optional-dependencies]
# Portable CPU fallback (Intel Macs, or non-Apple-Silicon).
cpu = ["faster-whisper>=1.0.0"]
# Alternative transcription backend: NVIDIA Parakeet TDT v3 on MLX (multilingual,
# very fast). Selectable as the "parakeet-tdt-v3" model.
parakeet = ["parakeet-mlx>=0.4"]
# VAD silence filtering (Silero) + phoneme word-alignment (torchaudio MMS_FA)
# for the Whisper path. Runs on-device.
align = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "silero-vad>=5.0",
]
# macOS menu-bar app (status-bar icon, settings popup with pickers + slider).
menubar = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]
# Speaker diarization ("person detection"). Heavy; pulls in torch + pyannote.
# pyannote.audio 4.x is required for the speaker-diarization-community-1 pipeline
# (and fixes the old use_auth_token issue, so no huggingface_hub pin is needed).
persons = [
    "pyannote.audio>=4.0",
    "torch>=2.0",
]

[project.scripts]
meetre = "meetre.cli:main"

[project.gui-scripts]
meetre-menubar = "meetre.menubar:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the Swift system-audio helper source; it is compiled on first use.
meetre = ["helpers/*.swift"]
